crates/hwp-core/tests/snapshots/snapshot_tests__table2_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<!DOCTYPE html>
<html>
<head>
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
  <title></title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8">
  <style>
body {margin:0;padding-left:0;padding-right:0;padding-bottom:0;padding-top:2mm;}
.hce {margin:0;padding:0;position:absolute;overflow:hidden;}
.hme {margin:0;padding:0;position:absolute;}
.hhe {margin:0;padding:0;position:relative;}
.hhi {display:inline-block;margin:0;padding:0;position:relative;background-size:contain;}
.hls {margin:0;padding:0;position:absolute;}
.hfS {margin:0;padding:0;position:absolute;}
.hcD {margin:0;padding:0;position:absolute;}
.hcI {margin:0;padding:0;position:absolute;}
.hcS {margin:0;padding:0;position:absolute;}
.hfN {margin:0;padding:0;position:relative;}
.hmB {margin:0;padding:0;position:absolute;}
.hmO {margin:0;padding:0;position:absolute;}
.hmT {margin:0;padding:0;position:absolute;}
.hpN {display:inline-block;margin:0;padding:0;position:relative;white-space:nowrap;}
.htC {display:inline-block;margin:0;padding:0;position:relative;vertical-align:top;overflow:hidden;}
.haN {display:inline-block;margin:0;padding:0;position:relative;}
.hdu {margin:0;padding:0;position:relative;}
.hdS {margin:0;padding:0;position:absolute;}
.hsC {margin:0;padding:0;position:absolute;}
.hsR {margin:0;padding:0;position:absolute;}
.hsG {margin:0;padding:0;position:absolute;}
.hsL {margin:0;padding:0;position:absolute;}
.hsT {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsE {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsA {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsP {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsV {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsO {margin:0;padding:0;position:absolute;}
.hsU {margin:0;padding:0;position:absolute;overflow:hidden;}
.hpi {margin:0;padding:0;position:absolute;}
.hch {margin:0;padding:0;position:absolute;}
.hcG {margin:0;padding:0;position:absolute;}
.heq {margin:0;padding:0;position:absolute;}
.heG {margin:0;padding:0;position:absolute;}
.htA {margin:0;padding:0;position:absolute;}
.hvi {margin:0;padding:0;position:absolute;}
.htb {margin:0;padding:0;position:absolute;}
.htG {margin:0;padding:0;position:absolute;}
.hfJ {margin:0;padding:0;position:absolute;}
.hfG {margin:0;padding:0;position:absolute;}
.hfB {margin:0;padding:0;position:absolute;}
.hfR {margin:0;padding:0;position:absolute;}
.hfC {margin:0;padding:0;position:absolute;}
.hfO {margin:0;padding:0;position:absolute;}
.hfL {margin:0;padding:0;position:absolute;}
.hfM {margin:0;padding:0;position:absolute;}
.hfE {margin:0;padding:0;position:absolute;}
.hpl {margin:0;padding:0;position:absolute;}
.hs {margin:0;padding:0;position:absolute;overflow:visible;}
.hpa {position:relative;padding:0;overflow:hidden;margin-left:2mm;margin-right:0mm;margin-bottom:2mm;margin-top:0mm;border:1px black solid;box-shadow:1mm 1mm 0 #AAAAAA;}
.hpa::after {content:'';position:absolute;margin:0;padding:0;left:0;right:0;top:0;bottom:0;background-color:white;z-index:-2;}
.hrt {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;vertical-align:middle;line-height:1.1;}
.hco {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;}
.hcc {margin:0;padding:0;position:absolute;}
.hls {clear:both;}
[onclick] {cursor:pointer;}
.cs0 {
  font-size:10pt;color:rgb(0,0,0);font-family:"함초롬바탕";
}
.cs1 {
  font-size:10pt;color:rgb(0,0,0);font-family:"함초롬돋움";
}
.cs2 {
  font-size:9pt;color:rgb(0,0,0);font-family:"함초롬돋움";
}
.cs3 {
  font-size:9pt;color:rgb(0,0,0);font-family:"함초롬바탕";
}
.cs4 {
  font-size:9pt;color:rgb(0,0,0);font-family:"함초롬돋움";letter-spacing:-0.03em;
}
.cs5 {
  font-size:16pt;color:rgb(46,116,181);font-family:"함초롬돋움";
}
.cs6 {
  font-size:11pt;color:rgb(0,0,0);font-family:"함초롬돋움";
}
.ps0 {
  text-align:justify;margin-bottom:0.56mm;
}
.ps1 {
  text-align:justify;padding-left:10.58mm;margin-bottom:0.56mm;
}
.ps2 {
  text-align:justify;padding-left:7.06mm;margin-bottom:0.56mm;
}
.ps3 {
  text-align:justify;padding-left:14.11mm;margin-bottom:0.56mm;line-height:0.01;
}
.ps4 {
  text-align:justify;padding-left:21.17mm;margin-bottom:0.56mm;line-height:0.02;
}
.ps5 {
  text-align:justify;padding-left:28.22mm;margin-bottom:0.56mm;line-height:0.03;
}
.ps6 {
  text-align:justify;padding-left:35.28mm;margin-bottom:0.56mm;line-height:0.04;
}
.ps7 {
  text-align:justify;padding-left:42.33mm;margin-bottom:0.56mm;line-height:0.05;
}
.ps8 {
  text-align:justify;padding-left:49.39mm;margin-bottom:0.56mm;line-height:0.06;
}
.ps9 {
  text-align:justify;margin-bottom:0.53mm;
}
.ps10 {
  text-align:justify;text-indent:-9.24mm;margin-bottom:0.46mm;
}
.ps11 {
  text-align:left;margin-bottom:0.46mm;
}
.ps12 {
  text-align:left;margin-top:2.12mm;margin-bottom:0.56mm;
}
.ps13 {
  text-align:left;margin-top:4.94mm;margin-bottom:0.56mm;
}
.ps14 {
  text-align:left;padding-left:7.76mm;margin-top:4.94mm;margin-bottom:0.56mm;
}
.ps15 {
  text-align:left;padding-left:15.52mm;margin-top:4.94mm;margin-bottom:0.56mm;
}
.ps16 {
  text-align:justify;padding-left:63.50mm;margin-bottom:0.56mm;line-height:0.08;
}
.ps17 {
  text-align:justify;padding-left:70.56mm;margin-bottom:0.56mm;line-height:0.09;
}
.ps18 {
  text-align:justify;padding-left:56.44mm;margin-bottom:0.56mm;line-height:0.07;
}
@media print {
.hpa {margin:0;border:0 black none;box-shadow:none;}
body {padding:0;}
}
  </style>
</head>


<body>
<div class="hpa" style="width:210mm;height:296.99mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:41.09mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:46.74mm;height:3.53mm;width:150.00mm;"></div></div></div><div class="htG" style="left:30mm;width:150mm;top:76.09mm;height:13.05mm;"><div class="htb" style="left:1mm;width:148mm;top:1mm;height:4.52mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 153 9.52" style="left:-2.5mm;top:-2.5mm;width:153mm;height:9.52mm;"><defs></defs><path d="M0,0 L0,4.52" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M148,0 L148,4.52" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L148.06,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L148.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.52 L148.06,4.52" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:148mm;height:4.53mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:144.40mm;"></div></div></div></div></div><div class="hcD" style="left:1mm;top:8.52mm;width:148mm;height:3.53mm;overflow:hidden;"><div class="hcI" ><div class="hls ps0" style="line-height:3mm;white-space:nowrap;left:0mm;top:-0.26mm;height:3.53mm;width:148mm;"><span class="hrt cs0">표&nbsp;</span><div class="haN" style="left:0mm;top:0mm;height:3.53mm;"><span class="hrt cs0">1</span></div><span class="hrt cs0">&nbsp;아래 캡션 개체와의 간격 3.00mm 바깥여백 모두 1.00mm</span></div></div></div></div><div class="htG" style="left:30mm;width:158mm;top:76.09mm;height:28.05mm;"><div class="hcD" style="left:5mm;top:5mm;width:148mm;height:3.53mm;overflow:hidden;"><div class="hcI" ><div class="hls ps0" style="line-height:3mm;white-space:nowrap;left:0mm;top:-0.26mm;height:3.53mm;width:148mm;"><span class="hrt cs0">표&nbsp;</span><div class="haN" style="left:0mm;top:0mm;height:3.53mm;"><span class="hrt cs0">2</span></div><span class="hrt cs0">&nbsp;위 캡션 바깥여백 모두 5.00mm 개체와의 간격 10.00mm </span></div></div></div><div class="htb" style="left:5mm;width:148mm;top:18.53mm;height:4.52mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 153 9.52" style="left:-2.5mm;top:-2.5mm;width:153mm;height:9.52mm;"><defs></defs><path d="M0,0 L0,4.52" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M148,0 L148,4.52" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L148.06,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L148.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.52 L148.06,4.52" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:148mm;height:4.53mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:144.40mm;"></div></div></div></div></div></div></div></body>

</html>
