crates/hwp-core/tests/snapshots/snapshot_tests__table_caption_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**버전**: 5.00.01.07




<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse;">
</table>
  
표  위 캡션


<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse;">
</table>
  
표  아래 캡션


<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse;">
</table>
  
표  왼쪽


<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse;">
</table>
  
표  오른쪽


<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse;">
</table>
  
표  왼쪽 위


<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse;">
</table>
  
표  오른쪽 아래


<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse;">
</table>
  
표  여백까지 확대

------------------------------------------


<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse;">
</table>
  
표  한 줄로 입력

------------------------------------------
